--- a/package.json
+++ b/package.json
@@ -25,15 +25,41 @@
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.2.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-android": "~6.4.0",
+    "cordova-plugin-googlemaps": "^2.2.9"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googlemaps": {
+        "PLAY_SERVICES_VERSION": "11.4.2",
+        "ANDROID_SUPPORT_V4_VERSION": "27.1.0",
+        "API_KEY_FOR_ANDROID": "AIza-hehe",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "in use",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "always"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
